Configuration dependency added